gfl/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    NUMBER
    STRING

Grammar

Rule 0     S' -> statements
Rule 1     statements -> statement
Rule 2     statements -> statement statements
Rule 3     statement -> prime_edit
Rule 4     statement -> base_edit
Rule 5     statement -> prime_del
Rule 6     statement -> peg
Rule 7     statement -> nick_site
Rule 8     statement -> reverse_transcriptase
Rule 9     statement -> pirna
Rule 10    statement -> transposon
Rule 11    statement -> endogenous_retrovirus
Rule 12    statement -> mitochondrial_gene
Rule 13    prime_edit -> PRIME_EDIT LPAREN arguments RPAREN
Rule 14    base_edit -> BASE_EDIT LPAREN arguments RPAREN
Rule 15    prime_del -> PRIME_DEL LPAREN arguments RPAREN
Rule 16    peg -> PEG LPAREN arguments RPAREN
Rule 17    nick_site -> NICK_SITE LPAREN arguments RPAREN
Rule 18    reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN
Rule 19    pirna -> PIRNA LPAREN arguments RPAREN
Rule 20    transposon -> TRANSPOSON LPAREN arguments RPAREN
Rule 21    endogenous_retrovirus -> ENDOGENOUS_RETROVIRUS LPAREN arguments RPAREN
Rule 22    mitochondrial_gene -> MITOCHONDRIAL_GENE LPAREN arguments RPAREN
Rule 23    arguments -> argument
Rule 24    arguments -> argument COMMA arguments
Rule 25    argument -> ID EQUALS ID

Terminals, with rules where they appear

BASE_EDIT            : 14
COMMA                : 24
ENDOGENOUS_RETROVIRUS : 21
EQUALS               : 25
ID                   : 25 25
LPAREN               : 13 14 15 16 17 18 19 20 21 22
MITOCHONDRIAL_GENE   : 22
NICK_SITE            : 17
NUMBER               : 
PEG                  : 16
PIRNA                : 19
PRIME_DEL            : 15
PRIME_EDIT           : 13
REVERSE_TRANSCRIPTASE : 18
RPAREN               : 13 14 15 16 17 18 19 20 21 22
STRING               : 
TRANSPOSON           : 20
error                : 

Nonterminals, with rules where they appear

argument             : 23 24
arguments            : 13 14 15 16 17 18 19 20 21 22 24
base_edit            : 4
endogenous_retrovirus : 11
mitochondrial_gene   : 12
nick_site            : 7
peg                  : 6
pirna                : 9
prime_del            : 5
prime_edit           : 3
reverse_transcriptase : 8
statement            : 1 2
statements           : 2 0
transposon           : 10

Parsing method: LALR

state 0

    (0) S' -> . statements
    (1) statements -> . statement
    (2) statements -> . statement statements
    (3) statement -> . prime_edit
    (4) statement -> . base_edit
    (5) statement -> . prime_del
    (6) statement -> . peg
    (7) statement -> . nick_site
    (8) statement -> . reverse_transcriptase
    (9) statement -> . pirna
    (10) statement -> . transposon
    (11) statement -> . endogenous_retrovirus
    (12) statement -> . mitochondrial_gene
    (13) prime_edit -> . PRIME_EDIT LPAREN arguments RPAREN
    (14) base_edit -> . BASE_EDIT LPAREN arguments RPAREN
    (15) prime_del -> . PRIME_DEL LPAREN arguments RPAREN
    (16) peg -> . PEG LPAREN arguments RPAREN
    (17) nick_site -> . NICK_SITE LPAREN arguments RPAREN
    (18) reverse_transcriptase -> . REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN
    (19) pirna -> . PIRNA LPAREN arguments RPAREN
    (20) transposon -> . TRANSPOSON LPAREN arguments RPAREN
    (21) endogenous_retrovirus -> . ENDOGENOUS_RETROVIRUS LPAREN arguments RPAREN
    (22) mitochondrial_gene -> . MITOCHONDRIAL_GENE LPAREN arguments RPAREN

    PRIME_EDIT      shift and go to state 13
    BASE_EDIT       shift and go to state 14
    PRIME_DEL       shift and go to state 15
    PEG             shift and go to state 16
    NICK_SITE       shift and go to state 17
    REVERSE_TRANSCRIPTASE shift and go to state 18
    PIRNA           shift and go to state 19
    TRANSPOSON      shift and go to state 20
    ENDOGENOUS_RETROVIRUS shift and go to state 21
    MITOCHONDRIAL_GENE shift and go to state 22

    statements                     shift and go to state 1
    statement                      shift and go to state 2
    prime_edit                     shift and go to state 3
    base_edit                      shift and go to state 4
    prime_del                      shift and go to state 5
    peg                            shift and go to state 6
    nick_site                      shift and go to state 7
    reverse_transcriptase          shift and go to state 8
    pirna                          shift and go to state 9
    transposon                     shift and go to state 10
    endogenous_retrovirus          shift and go to state 11
    mitochondrial_gene             shift and go to state 12

state 1

    (0) S' -> statements .



state 2

    (1) statements -> statement .
    (2) statements -> statement . statements
    (1) statements -> . statement
    (2) statements -> . statement statements
    (3) statement -> . prime_edit
    (4) statement -> . base_edit
    (5) statement -> . prime_del
    (6) statement -> . peg
    (7) statement -> . nick_site
    (8) statement -> . reverse_transcriptase
    (9) statement -> . pirna
    (10) statement -> . transposon
    (11) statement -> . endogenous_retrovirus
    (12) statement -> . mitochondrial_gene
    (13) prime_edit -> . PRIME_EDIT LPAREN arguments RPAREN
    (14) base_edit -> . BASE_EDIT LPAREN arguments RPAREN
    (15) prime_del -> . PRIME_DEL LPAREN arguments RPAREN
    (16) peg -> . PEG LPAREN arguments RPAREN
    (17) nick_site -> . NICK_SITE LPAREN arguments RPAREN
    (18) reverse_transcriptase -> . REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN
    (19) pirna -> . PIRNA LPAREN arguments RPAREN
    (20) transposon -> . TRANSPOSON LPAREN arguments RPAREN
    (21) endogenous_retrovirus -> . ENDOGENOUS_RETROVIRUS LPAREN arguments RPAREN
    (22) mitochondrial_gene -> . MITOCHONDRIAL_GENE LPAREN arguments RPAREN

    $end            reduce using rule 1 (statements -> statement .)
    PRIME_EDIT      shift and go to state 13
    BASE_EDIT       shift and go to state 14
    PRIME_DEL       shift and go to state 15
    PEG             shift and go to state 16
    NICK_SITE       shift and go to state 17
    REVERSE_TRANSCRIPTASE shift and go to state 18
    PIRNA           shift and go to state 19
    TRANSPOSON      shift and go to state 20
    ENDOGENOUS_RETROVIRUS shift and go to state 21
    MITOCHONDRIAL_GENE shift and go to state 22

    statement                      shift and go to state 2
    statements                     shift and go to state 23
    prime_edit                     shift and go to state 3
    base_edit                      shift and go to state 4
    prime_del                      shift and go to state 5
    peg                            shift and go to state 6
    nick_site                      shift and go to state 7
    reverse_transcriptase          shift and go to state 8
    pirna                          shift and go to state 9
    transposon                     shift and go to state 10
    endogenous_retrovirus          shift and go to state 11
    mitochondrial_gene             shift and go to state 12

state 3

    (3) statement -> prime_edit .

    PRIME_EDIT      reduce using rule 3 (statement -> prime_edit .)
    BASE_EDIT       reduce using rule 3 (statement -> prime_edit .)
    PRIME_DEL       reduce using rule 3 (statement -> prime_edit .)
    PEG             reduce using rule 3 (statement -> prime_edit .)
    NICK_SITE       reduce using rule 3 (statement -> prime_edit .)
    REVERSE_TRANSCRIPTASE reduce using rule 3 (statement -> prime_edit .)
    PIRNA           reduce using rule 3 (statement -> prime_edit .)
    TRANSPOSON      reduce using rule 3 (statement -> prime_edit .)
    ENDOGENOUS_RETROVIRUS reduce using rule 3 (statement -> prime_edit .)
    MITOCHONDRIAL_GENE reduce using rule 3 (statement -> prime_edit .)
    $end            reduce using rule 3 (statement -> prime_edit .)


state 4

    (4) statement -> base_edit .

    PRIME_EDIT      reduce using rule 4 (statement -> base_edit .)
    BASE_EDIT       reduce using rule 4 (statement -> base_edit .)
    PRIME_DEL       reduce using rule 4 (statement -> base_edit .)
    PEG             reduce using rule 4 (statement -> base_edit .)
    NICK_SITE       reduce using rule 4 (statement -> base_edit .)
    REVERSE_TRANSCRIPTASE reduce using rule 4 (statement -> base_edit .)
    PIRNA           reduce using rule 4 (statement -> base_edit .)
    TRANSPOSON      reduce using rule 4 (statement -> base_edit .)
    ENDOGENOUS_RETROVIRUS reduce using rule 4 (statement -> base_edit .)
    MITOCHONDRIAL_GENE reduce using rule 4 (statement -> base_edit .)
    $end            reduce using rule 4 (statement -> base_edit .)


state 5

    (5) statement -> prime_del .

    PRIME_EDIT      reduce using rule 5 (statement -> prime_del .)
    BASE_EDIT       reduce using rule 5 (statement -> prime_del .)
    PRIME_DEL       reduce using rule 5 (statement -> prime_del .)
    PEG             reduce using rule 5 (statement -> prime_del .)
    NICK_SITE       reduce using rule 5 (statement -> prime_del .)
    REVERSE_TRANSCRIPTASE reduce using rule 5 (statement -> prime_del .)
    PIRNA           reduce using rule 5 (statement -> prime_del .)
    TRANSPOSON      reduce using rule 5 (statement -> prime_del .)
    ENDOGENOUS_RETROVIRUS reduce using rule 5 (statement -> prime_del .)
    MITOCHONDRIAL_GENE reduce using rule 5 (statement -> prime_del .)
    $end            reduce using rule 5 (statement -> prime_del .)


state 6

    (6) statement -> peg .

    PRIME_EDIT      reduce using rule 6 (statement -> peg .)
    BASE_EDIT       reduce using rule 6 (statement -> peg .)
    PRIME_DEL       reduce using rule 6 (statement -> peg .)
    PEG             reduce using rule 6 (statement -> peg .)
    NICK_SITE       reduce using rule 6 (statement -> peg .)
    REVERSE_TRANSCRIPTASE reduce using rule 6 (statement -> peg .)
    PIRNA           reduce using rule 6 (statement -> peg .)
    TRANSPOSON      reduce using rule 6 (statement -> peg .)
    ENDOGENOUS_RETROVIRUS reduce using rule 6 (statement -> peg .)
    MITOCHONDRIAL_GENE reduce using rule 6 (statement -> peg .)
    $end            reduce using rule 6 (statement -> peg .)


state 7

    (7) statement -> nick_site .

    PRIME_EDIT      reduce using rule 7 (statement -> nick_site .)
    BASE_EDIT       reduce using rule 7 (statement -> nick_site .)
    PRIME_DEL       reduce using rule 7 (statement -> nick_site .)
    PEG             reduce using rule 7 (statement -> nick_site .)
    NICK_SITE       reduce using rule 7 (statement -> nick_site .)
    REVERSE_TRANSCRIPTASE reduce using rule 7 (statement -> nick_site .)
    PIRNA           reduce using rule 7 (statement -> nick_site .)
    TRANSPOSON      reduce using rule 7 (statement -> nick_site .)
    ENDOGENOUS_RETROVIRUS reduce using rule 7 (statement -> nick_site .)
    MITOCHONDRIAL_GENE reduce using rule 7 (statement -> nick_site .)
    $end            reduce using rule 7 (statement -> nick_site .)


state 8

    (8) statement -> reverse_transcriptase .

    PRIME_EDIT      reduce using rule 8 (statement -> reverse_transcriptase .)
    BASE_EDIT       reduce using rule 8 (statement -> reverse_transcriptase .)
    PRIME_DEL       reduce using rule 8 (statement -> reverse_transcriptase .)
    PEG             reduce using rule 8 (statement -> reverse_transcriptase .)
    NICK_SITE       reduce using rule 8 (statement -> reverse_transcriptase .)
    REVERSE_TRANSCRIPTASE reduce using rule 8 (statement -> reverse_transcriptase .)
    PIRNA           reduce using rule 8 (statement -> reverse_transcriptase .)
    TRANSPOSON      reduce using rule 8 (statement -> reverse_transcriptase .)
    ENDOGENOUS_RETROVIRUS reduce using rule 8 (statement -> reverse_transcriptase .)
    MITOCHONDRIAL_GENE reduce using rule 8 (statement -> reverse_transcriptase .)
    $end            reduce using rule 8 (statement -> reverse_transcriptase .)


state 9

    (9) statement -> pirna .

    PRIME_EDIT      reduce using rule 9 (statement -> pirna .)
    BASE_EDIT       reduce using rule 9 (statement -> pirna .)
    PRIME_DEL       reduce using rule 9 (statement -> pirna .)
    PEG             reduce using rule 9 (statement -> pirna .)
    NICK_SITE       reduce using rule 9 (statement -> pirna .)
    REVERSE_TRANSCRIPTASE reduce using rule 9 (statement -> pirna .)
    PIRNA           reduce using rule 9 (statement -> pirna .)
    TRANSPOSON      reduce using rule 9 (statement -> pirna .)
    ENDOGENOUS_RETROVIRUS reduce using rule 9 (statement -> pirna .)
    MITOCHONDRIAL_GENE reduce using rule 9 (statement -> pirna .)
    $end            reduce using rule 9 (statement -> pirna .)


state 10

    (10) statement -> transposon .

    PRIME_EDIT      reduce using rule 10 (statement -> transposon .)
    BASE_EDIT       reduce using rule 10 (statement -> transposon .)
    PRIME_DEL       reduce using rule 10 (statement -> transposon .)
    PEG             reduce using rule 10 (statement -> transposon .)
    NICK_SITE       reduce using rule 10 (statement -> transposon .)
    REVERSE_TRANSCRIPTASE reduce using rule 10 (statement -> transposon .)
    PIRNA           reduce using rule 10 (statement -> transposon .)
    TRANSPOSON      reduce using rule 10 (statement -> transposon .)
    ENDOGENOUS_RETROVIRUS reduce using rule 10 (statement -> transposon .)
    MITOCHONDRIAL_GENE reduce using rule 10 (statement -> transposon .)
    $end            reduce using rule 10 (statement -> transposon .)


state 11

    (11) statement -> endogenous_retrovirus .

    PRIME_EDIT      reduce using rule 11 (statement -> endogenous_retrovirus .)
    BASE_EDIT       reduce using rule 11 (statement -> endogenous_retrovirus .)
    PRIME_DEL       reduce using rule 11 (statement -> endogenous_retrovirus .)
    PEG             reduce using rule 11 (statement -> endogenous_retrovirus .)
    NICK_SITE       reduce using rule 11 (statement -> endogenous_retrovirus .)
    REVERSE_TRANSCRIPTASE reduce using rule 11 (statement -> endogenous_retrovirus .)
    PIRNA           reduce using rule 11 (statement -> endogenous_retrovirus .)
    TRANSPOSON      reduce using rule 11 (statement -> endogenous_retrovirus .)
    ENDOGENOUS_RETROVIRUS reduce using rule 11 (statement -> endogenous_retrovirus .)
    MITOCHONDRIAL_GENE reduce using rule 11 (statement -> endogenous_retrovirus .)
    $end            reduce using rule 11 (statement -> endogenous_retrovirus .)


state 12

    (12) statement -> mitochondrial_gene .

    PRIME_EDIT      reduce using rule 12 (statement -> mitochondrial_gene .)
    BASE_EDIT       reduce using rule 12 (statement -> mitochondrial_gene .)
    PRIME_DEL       reduce using rule 12 (statement -> mitochondrial_gene .)
    PEG             reduce using rule 12 (statement -> mitochondrial_gene .)
    NICK_SITE       reduce using rule 12 (statement -> mitochondrial_gene .)
    REVERSE_TRANSCRIPTASE reduce using rule 12 (statement -> mitochondrial_gene .)
    PIRNA           reduce using rule 12 (statement -> mitochondrial_gene .)
    TRANSPOSON      reduce using rule 12 (statement -> mitochondrial_gene .)
    ENDOGENOUS_RETROVIRUS reduce using rule 12 (statement -> mitochondrial_gene .)
    MITOCHONDRIAL_GENE reduce using rule 12 (statement -> mitochondrial_gene .)
    $end            reduce using rule 12 (statement -> mitochondrial_gene .)


state 13

    (13) prime_edit -> PRIME_EDIT . LPAREN arguments RPAREN

    LPAREN          shift and go to state 24


state 14

    (14) base_edit -> BASE_EDIT . LPAREN arguments RPAREN

    LPAREN          shift and go to state 25


state 15

    (15) prime_del -> PRIME_DEL . LPAREN arguments RPAREN

    LPAREN          shift and go to state 26


state 16

    (16) peg -> PEG . LPAREN arguments RPAREN

    LPAREN          shift and go to state 27


state 17

    (17) nick_site -> NICK_SITE . LPAREN arguments RPAREN

    LPAREN          shift and go to state 28


state 18

    (18) reverse_transcriptase -> REVERSE_TRANSCRIPTASE . LPAREN arguments RPAREN

    LPAREN          shift and go to state 29


state 19

    (19) pirna -> PIRNA . LPAREN arguments RPAREN

    LPAREN          shift and go to state 30


state 20

    (20) transposon -> TRANSPOSON . LPAREN arguments RPAREN

    LPAREN          shift and go to state 31


state 21

    (21) endogenous_retrovirus -> ENDOGENOUS_RETROVIRUS . LPAREN arguments RPAREN

    LPAREN          shift and go to state 32


state 22

    (22) mitochondrial_gene -> MITOCHONDRIAL_GENE . LPAREN arguments RPAREN

    LPAREN          shift and go to state 33


state 23

    (2) statements -> statement statements .

    $end            reduce using rule 2 (statements -> statement statements .)


state 24

    (13) prime_edit -> PRIME_EDIT LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 34
    argument                       shift and go to state 35

state 25

    (14) base_edit -> BASE_EDIT LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 37
    argument                       shift and go to state 35

state 26

    (15) prime_del -> PRIME_DEL LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 38
    argument                       shift and go to state 35

state 27

    (16) peg -> PEG LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 39
    argument                       shift and go to state 35

state 28

    (17) nick_site -> NICK_SITE LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 40
    argument                       shift and go to state 35

state 29

    (18) reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 41
    argument                       shift and go to state 35

state 30

    (19) pirna -> PIRNA LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 42
    argument                       shift and go to state 35

state 31

    (20) transposon -> TRANSPOSON LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 43
    argument                       shift and go to state 35

state 32

    (21) endogenous_retrovirus -> ENDOGENOUS_RETROVIRUS LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 44
    argument                       shift and go to state 35

state 33

    (22) mitochondrial_gene -> MITOCHONDRIAL_GENE LPAREN . arguments RPAREN
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    arguments                      shift and go to state 45
    argument                       shift and go to state 35

state 34

    (13) prime_edit -> PRIME_EDIT LPAREN arguments . RPAREN

    RPAREN          shift and go to state 46


state 35

    (23) arguments -> argument .
    (24) arguments -> argument . COMMA arguments

    RPAREN          reduce using rule 23 (arguments -> argument .)
    COMMA           shift and go to state 47


state 36

    (25) argument -> ID . EQUALS ID

    EQUALS          shift and go to state 48


state 37

    (14) base_edit -> BASE_EDIT LPAREN arguments . RPAREN

    RPAREN          shift and go to state 49


state 38

    (15) prime_del -> PRIME_DEL LPAREN arguments . RPAREN

    RPAREN          shift and go to state 50


state 39

    (16) peg -> PEG LPAREN arguments . RPAREN

    RPAREN          shift and go to state 51


state 40

    (17) nick_site -> NICK_SITE LPAREN arguments . RPAREN

    RPAREN          shift and go to state 52


state 41

    (18) reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments . RPAREN

    RPAREN          shift and go to state 53


state 42

    (19) pirna -> PIRNA LPAREN arguments . RPAREN

    RPAREN          shift and go to state 54


state 43

    (20) transposon -> TRANSPOSON LPAREN arguments . RPAREN

    RPAREN          shift and go to state 55


state 44

    (21) endogenous_retrovirus -> ENDOGENOUS_RETROVIRUS LPAREN arguments . RPAREN

    RPAREN          shift and go to state 56


state 45

    (22) mitochondrial_gene -> MITOCHONDRIAL_GENE LPAREN arguments . RPAREN

    RPAREN          shift and go to state 57


state 46

    (13) prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .

    PRIME_EDIT      reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    BASE_EDIT       reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    PRIME_DEL       reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    PEG             reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    NICK_SITE       reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    REVERSE_TRANSCRIPTASE reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    PIRNA           reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    TRANSPOSON      reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    ENDOGENOUS_RETROVIRUS reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    MITOCHONDRIAL_GENE reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)
    $end            reduce using rule 13 (prime_edit -> PRIME_EDIT LPAREN arguments RPAREN .)


state 47

    (24) arguments -> argument COMMA . arguments
    (23) arguments -> . argument
    (24) arguments -> . argument COMMA arguments
    (25) argument -> . ID EQUALS ID

    ID              shift and go to state 36

    argument                       shift and go to state 35
    arguments                      shift and go to state 58

state 48

    (25) argument -> ID EQUALS . ID

    ID              shift and go to state 59


state 49

    (14) base_edit -> BASE_EDIT LPAREN arguments RPAREN .

    PRIME_EDIT      reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    BASE_EDIT       reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    PRIME_DEL       reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    PEG             reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    NICK_SITE       reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    REVERSE_TRANSCRIPTASE reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    PIRNA           reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    TRANSPOSON      reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    ENDOGENOUS_RETROVIRUS reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    MITOCHONDRIAL_GENE reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)
    $end            reduce using rule 14 (base_edit -> BASE_EDIT LPAREN arguments RPAREN .)


state 50

    (15) prime_del -> PRIME_DEL LPAREN arguments RPAREN .

    PRIME_EDIT      reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    BASE_EDIT       reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    PRIME_DEL       reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    PEG             reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    NICK_SITE       reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    REVERSE_TRANSCRIPTASE reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    PIRNA           reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    TRANSPOSON      reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    ENDOGENOUS_RETROVIRUS reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    MITOCHONDRIAL_GENE reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)
    $end            reduce using rule 15 (prime_del -> PRIME_DEL LPAREN arguments RPAREN .)


state 51

    (16) peg -> PEG LPAREN arguments RPAREN .

    PRIME_EDIT      reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    BASE_EDIT       reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    PRIME_DEL       reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    PEG             reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    NICK_SITE       reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    REVERSE_TRANSCRIPTASE reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    PIRNA           reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    TRANSPOSON      reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    ENDOGENOUS_RETROVIRUS reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    MITOCHONDRIAL_GENE reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)
    $end            reduce using rule 16 (peg -> PEG LPAREN arguments RPAREN .)


state 52

    (17) nick_site -> NICK_SITE LPAREN arguments RPAREN .

    PRIME_EDIT      reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    BASE_EDIT       reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    PRIME_DEL       reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    PEG             reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    NICK_SITE       reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    REVERSE_TRANSCRIPTASE reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    PIRNA           reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    TRANSPOSON      reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    ENDOGENOUS_RETROVIRUS reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    MITOCHONDRIAL_GENE reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)
    $end            reduce using rule 17 (nick_site -> NICK_SITE LPAREN arguments RPAREN .)


state 53

    (18) reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .

    PRIME_EDIT      reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    BASE_EDIT       reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    PRIME_DEL       reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    PEG             reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    NICK_SITE       reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    REVERSE_TRANSCRIPTASE reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    PIRNA           reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    TRANSPOSON      reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    ENDOGENOUS_RETROVIRUS reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    MITOCHONDRIAL_GENE reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)
    $end            reduce using rule 18 (reverse_transcriptase -> REVERSE_TRANSCRIPTASE LPAREN arguments RPAREN .)


state 54

    (19) pirna -> PIRNA LPAREN arguments RPAREN .

    PRIME_EDIT      reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    BASE_EDIT       reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    PRIME_DEL       reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    PEG             reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    NICK_SITE       reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    REVERSE_TRANSCRIPTASE reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    PIRNA           reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    TRANSPOSON      reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    ENDOGENOUS_RETROVIRUS reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    MITOCHONDRIAL_GENE reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)
    $end            reduce using rule 19 (pirna -> PIRNA LPAREN arguments RPAREN .)


state 55

    (20) transposon -> TRANSPOSON LPAREN arguments RPAREN .
